--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <maven.compiler.target>11</maven.compiler.target>
     <maven.compiler.source>11</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.scm.id>github</project.scm.id>
   </properties>
 
   <dependencies>
