--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,10 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -19,5 +15,14 @@
 *.tar.gz
 *.rar
 
+# maven
+target/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#IntelliJ project files
+.idea
+*.iml
+/.env
+out
