PCS-92 release numbering to 0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>container-check-sonar-plugin</artifactId>
   <packaging>sonar-plugin</packaging>
   <name>Container-Check Plugin for SonarQube</name>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <description>A Sonar plugin which will look at a trivy-generated container vulnerability scan
     output file in JSON format and transform and upload the data to a running sonar instance.
     Invoked by sonar-scanner which knows where the running Sonar instance is.
