--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,15 @@ target/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+#eclipse project files
+.settings/
+.project
+.classpath
+
 #IntelliJ project files
 .idea
 *.iml
 /.env
 out
+
+.factorypath
